--- a/package.json
+++ b/package.json
@@ -15,30 +15,40 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.3.2",
     "@shopify/react-native-skia": "^2.0.0",
     "axios": "^1.9.0",
     "expo": "~53.0.9",
+    "expo-blur": "^14.1.4",
     "expo-font": "~13.3.1",
+    "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "^0.31.2",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "lottie-react": "^2.4.1",
+    "lottie-react-native": "^7.2.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.56.3",
+    "react-lottie": "^1.2.10",
     "react-native": "0.79.2",
     "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-skia": "^0.0.1",
+    "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-navigation": "^5.0.0"
@@ -47,6 +57,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
+    "expo-module-scripts": "^4.1.7",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
     "react-test-renderer": "19.0.0",
